--- a/ARKANOID/index.html
+++ b/ARKANOID/index.html
@@ -16,6 +16,11 @@
 </style>
 <body>
     <canvas></canvas>
+
+    <img hidden id="sprite" src="./img/sprite.png" alt="Imagen de ladrillos">
+    <img hidden id="bricks" src="./img/bricks.png" alt="Imagen de ladrillos">
+
+
     <script src="juego.js"></script>
 </body>
 
